@@ -1,3 +1,10 @@
+2007-03-05  Mike Kestner  <mkestner@novell.com>
+
+	* gtk/Application.custom : set prgname in Init methods so
+	that WM_CLASS is more appropriate.  Programs using Gnome.Program
+	already get a nice prgname, but Gtk.Application.Init apps were
+	getting a path instead of a filename without extension.
+
 2007-03-01  Brad Taylor  <brad@getcoded.net>
 
 	* gtk/Dialog.custom: obsolete old, improperly bound
